docs: move/delete remaining files for `doc/` directory
Move `doc/LibreBooking.mwb` to
`docs/entity-relationship-diagram/LibreBooking.mwb`

Move `doc/.markdownlint.yml` to `docs/.markdownlint.yml`

Delete `doc/ERD.svg` as no longer needed.

Update CI job to use new location of `.markdownlint.yml`

--- a/.github/workflows/lint-and-analyse-php.yml
+++ b/.github/workflows/lint-and-analyse-php.yml
@@ -39,10 +39,9 @@ jobs:
       - name: markdownlint-cli2-action
         uses: DavidAnson/markdownlint-cli2-action@v20
         with:
-          config: 'doc/.markdownlint.yml'
+          config: 'docs/.markdownlint.yml'
           globs: |
             *.md
-            doc/*.md
 
   phpunit:
     runs-on: ubuntu-latest
