--- a/.github/workflows/lint-and-analyse-php.yml
+++ b/.github/workflows/lint-and-analyse-php.yml
@@ -29,6 +29,8 @@ jobs:
       - run: pip install --upgrade tox
       - name: Run commitizen (https://commitizen-tools.github.io/commitizen/)
         run: tox -e cz
+      - name: Run config-check
+        run: tox -e config-check
 
   markdownlint:
     runs-on: ubuntu-latest
