--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 minversion = 4.0
 skipsdist = True
 skip_missing_interpreters = True
-envlist = cz
+envlist = cz,config-check
 
 [testenv]
 passenv =
@@ -29,6 +29,13 @@ commands =
   # Ensure that our starting commit is really an ancestor of HEAD
   git merge-base --is-ancestor 8a420dd06cb2b07748953255420556b0ded7d769 HEAD
   cz check --rev-range 8a420dd06cb2b07748953255420556b0ded7d769..HEAD
+
+[testenv:config-check]
+basepython = python3
+deps = -r{toxinidir}/requirements-lint.txt
+allowlist_externals = {toxinidir}/ci/config-check.py
+commands =
+  {toxinidir}/ci/config-check.py {toxinidir}/config/
 
 [testenv:docs]
 description = Builds the docs site. Generated HTML files will be available in '{env:DOCS_BUILD}'.
