--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "squizlabs/php_codesniffer": "^3.7.1",
         "phpcompatibility/php-compatibility": "^9.3.5",
         "kint-php/kint": "^4.2.3",
-        "phpunit/phpunit": "^11.3"
+        "phpunit/phpunit": "^11.3",
+        "phpstan/phpstan": "^2.1"
     },
     "require": {
         "php": ">=8.2",
@@ -34,6 +35,7 @@
         "fix": "./tools/php-cs-fixer fix -v",
         "lint": "./tools/php-cs-fixer fix -vv --dry-run",
         "phpunit": "./vendor/bin/phpunit",
+        "phpstan": "./vendor/bin/phpstan analyse",
         "test": [
             "@phpunit",
             "@lint"
