chore(phpstan): add some files from `lib/` directory to scan
Add:
  - lang/AvailableLanguage.php
  - lang/AvailableLanguages.php
  - lang/Language.php

Did not add just 'lang/' as it increased the time to run by a lot.

Also sort the paths.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,13 +5,16 @@ parameters:
     level: 0
     errorFormat: prettyJson
     paths:
-        - Jobs
-        - lib
         - Domain
+        - Jobs
         - Pages
         - Presenters
-        - WebServices
         - Web
+        - WebServices
+        - lang/AvailableLanguage.php
+        - lang/AvailableLanguages.php
+        - lang/Language.php
+        - lib
     excludePaths:
         analyse:
             - vendor/
