chore(phpstan): add 'Controls/' to the paths
Have phpstan scan the 'Controls/' directory

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,6 +5,7 @@ parameters:
     level: 0
     errorFormat: prettyJson
     paths:
+        - Controls
         - Domain
         - Jobs
         - Pages
