chore(phpstan): scan remaining directories
Scan the remaining directories containing PHP code.

Fix issue in tests/fakes/EmailFakes.php that had to be resolved.

Add `lib/external/Slim/Http/Util.php` to the exclude list. We either
need to upgrade Slim or replace it.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -12,17 +12,22 @@ parameters:
         - Presenters
         - Web
         - WebServices
+        - config
         - lang/AvailableLanguage.php
         - lang/AvailableLanguages.php
         - lang/Language.php
         - lib
+        - phing-tasks
+        - plugins
+        - tests
     excludePaths:
         analyse:
-            - vendor/
-            - tpl_c/ (?)
-            - build/ (?)
-            - Web/scripts/
             - Web/css/
+            - Web/scripts/
+            - build/ (?)
+            - lib/external/Slim/Http/Util.php
             - plugins/
+            - tpl_c/ (?)
+            - vendor/
     bootstrapFiles:
         - vendor/autoload.php
