--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,7 @@
+includes:
+    - phpstan-baseline.neon
 parameters:
-    level: 0
+    level: 1
     errorFormat: prettyJson
     paths:
         - Controls
