--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,7 @@ includes:
 parameters:
     level: 1
     errorFormat: prettyJson
+    treatPhpDocTypesAsCertain: false
     paths:
         - Controls
         - Domain
