chore: don't allow use of `die` or `exit`

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -29,3 +29,6 @@ parameters:
             - vendor/
     bootstrapFiles:
         - vendor/autoload.php
+
+rules:
+  - LibreBookingDev\PHPStan\NoDieRule
