--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,11 @@
     "description": "LibreBooking",
     "license": "GPL-3.0-only",
     "autoload": {},
+    "autoload-dev": {
+        "psr-4": {
+            "LibreBookingDev\\PHPStan\\": "phpstan-rules"
+        }
+    },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7.1",
         "phpcompatibility/php-compatibility": "^9.3.5",
