--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "gregwar/captcha": "^1.3",
         "google/apiclient": "^2.0",
         "microsoft/microsoft-graph": "^2.0",
-        "nickdnk/graph-sdk": "^7.0",
+        "joelbutcher/facebook-graph-sdk": "^6.1",
         "mobiledetect/mobiledetectlib": "^4.8",
         "bacon/bacon-qr-code": "^3.0",
         "mibe/feedwriter": "^1.1",
