fix: update environment variable keys and add resource options in config files

--- a/.env.example
+++ b/.env.example
@@ -161,10 +161,10 @@ LB_LOGGING_SQL=false
 ##########################
 
 # Full or relative path to where images will be stored
-LB_UPLOAD_IMAGE_DIRECTORY='Web/uploads/images'
+LB_UPLOADS_IMAGE_UPLOAD_DIRECTORY='Web/uploads/images'
 
 # full or relative path to show uploaded images from
-LB_UPLOAD_IMAGE_URL='uploads/images'
+LB_UPLOADS_IMAGE_UPLOAD_URL='uploads/images'
 
 # Enable reservation attachments (true/false)
 LB_UPLOADS_RESERVATION_ATTACHMENTS_ENABLED=false
@@ -375,6 +375,13 @@ LB_REGISTRATION_AUTO_SUBSCRIBE_EMAIL=false
 LB_REGISTRATION_NOTIFY_ADMIN=false
 
 ##########################################
+# Resource Options
+##########################################
+
+# Indicates if the contact must be a registered user
+LB_RESOURCE_CONTACT_IS_USER=false
+
+##########################################
 # Tablet View Options
 ##########################################
 
@@ -421,7 +428,7 @@ LB_CLEANUP_DELETE_OLD_RESERVATIONS=false
 ##########################################
 
 # Disable the 'Forgot Password' feature (true/false)
-LB_DISABLE_PASSWORD_RESET=false
+LB_PASSWORD_DISABLE_RESET=false
 
 # Minimum number of letters required in passwords
 LB_PASSWORD_MINIMUM_LETTERS=6
@@ -490,6 +497,9 @@ LB_SECURITY_X_XSS='1; mode=block'
 
 # X-Content-Type-Options header value
 LB_SECURITY_X_CONTENT_TYPE='nosniff'
+
+# Set the Content-Security-Policy header value
+LB_SECURITY_CONTENT_SECURITY_POLICY=''
 
 ##########################################
 # Credit System Settings
@@ -629,28 +639,28 @@ LB_AUTHENTICATION_OAUTH2_CLIENT_URI='/Web/oauth2-auth.php'
 
 # Comma-separated list of plugin class names to use for authentication
 # Available authentication plugins: ActiveDirectory, Apache, CAS, Drupal, Krb5, Ldap, Mellon, Moodle, MoodleAdv, Saml, Shibboleth, WordPress
-LB_PLUGIN_AUTHENTICATION=
+LB_PLUGINS_AUTHENTICATION=
 
 # Comma-separated list of plugin class names to use for authorization
-LB_PLUGIN_AUTHORIZATION=
+LB_PLUGINS_AUTHORIZATION=
 
 # Comma-separated list of plugin class names to handle data export
-LB_PLUGIN_EXPORT=
+LB_PLUGINS_EXPORT=
 
 # Comma-separated list of plugin class names for permission management
-LB_PLUGIN_PERMISSION=
+LB_PLUGINS_PERMISSION=
 
 # Comma-separated list of plugin class names to run after user registration
-LB_PLUGIN_POSTREGISTRATION=
+LB_PLUGINS_POSTREGISTRATION=
 
 # Comma-separated list of plugin class names to run before reservation creation
-LB_PLUGIN_PRERESERVATION=
+LB_PLUGINS_PRERESERVATION=
 
 # Comma-separated list of plugin class names to run after reservation is created/updated
-LB_PLUGIN_POSTRESERVATION=
+LB_PLUGINS_POSTRESERVATION=
 
 # Comma-separated list of plugin class names to apply custom styling logic
-LB_PLUGIN_STYLING=
+LB_PLUGINS_STYLING=
 
 
 ##########################################
